--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "babel-eslint": "^7.2.3",
     "eslint": "^4.1.1"
   },
+  "scripts": {
+    "test": "node tests"
+  },
   "name": "eslint-plugin-tanda",
   "version": "0.0.7",
   "description": "A small collection of custom ESLint plugins",
