add a linter to prevent problems like this from happening
yo dawg, i heard you like linters so I got you a linter for your linter

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^4.1.1"
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   },
   "scripts": {
+    "lint": "eslint lib/ tests/",
     "test": "node tests"
   },
   "name": "eslint-plugin-tanda",
