--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "babel-eslint": "^7.2.3",
     "eslint": "^4.1.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.8.0",
+    "generator-eslint": "^1.2.0",
+    "yo": "^2.0.5"
   },
   "scripts": {
     "lint": "eslint lib/ tests/",
